# kazma

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  APPROVAL_PROMPT.md  ARCHITECTURE_CHANGE.md  AUDIT_DEEP_REPORT_2026-07-07.md  AUDIT_DEEP_REPORT_2026-07-08.md  AUDIT_FRESH_2026-07-09.md  AUDIT_REPORT_1160674.md  BUG_FIX_TASK.md  CHANGELOG.md  CODE_QUALITY_AUDIT.md  CONTRIBUTING.md  DEEP_AUDIT_REPORT.md  Dockerfile  Dockerfile.demo  FULL_REMEDIATION_PLAN.md  HANDOFF_PHASE5.md  HANDOFF_PROMPT.md  HANDOVER.md  HARDENING_REPORT.md  KAZMA_PROJECT_SUMMARY.md  Kazma (كاظمه) — Master Architecture Blueprint.md  Kazma Project Enhancement Task Plan.md  LANDING_PAGE_UPDATE.md  METRICS.md  PLAN_weakest_parts.md  PROJECT_UNDERSTANDING.md  README.md  ROADMAP.md  SECURITY.md  SECURITY_AUDIT.md  STATUS.md  TASK1_TELEGRAM_MENU_PLAN.md  TASK2_AUDIT_REPORT.md  TASK3_ROADMAP.md  TASK4_ACTIVE_TASKS_DIAGNOSIS.md  architecture.md  (+25 more)
.github/: BOT_COMMIT.md
.poolside/: settings.local.yaml
.pytest_tmp/: test_account_infocurrent  test_account_sessionscurrent  test_account_tokenscurrent  test_acknowledge_not_foundcurrent  test_acknowledge_transitions_scurrent  test_acknowledge_wrong_statuscurrent  test_adapter_persistence_uses_current  test_add_and_countcurrent  test_add_and_get_edgecurrent  test_add_and_get_nodecurrent  test_add_entity_creates_nodecurrent  test_add_entity_persistscurrent  test_add_entity_stores_propertcurrent  test_add_provider_update_existcurrent  test_add_providercurrent  test_add_relation_creates_edgecurrent  test_add_relation_stores_propecurrent  test_add_toolcurrent  test_admin_full_accesscurrent  test_agent_config_updatecurrent  test_agent_configcurrent  test_analyze_auto_resizes_largcurrent  test_announce_caches_locallycurrent  test_announce_registers_with_hcurrent  test_announce_updates_capabilicurrent  test_appearance_defaultscurrent  test_appearance_getcurrent  test_appearance_savecurrent  test_appearance_updatecurrent  test_approve_already_resolvedcurrent  test_approve_grants_rolecurrent  test_approve_nonexistent_requecurrent  test_approve_requestcurrent  test_approve_requires_admin_rocurrent  test_arabic_searchcurrent  test_assign_role_invalid_diviscurrent  test_assign_role_invalid_rolecurrent  test_assign_rolecurrent  test_at_limit_acceptedcurrent  test_audit_logged_on_requestcurrent  (+619 more)
.pytest_tmp_run/: test_100_concurrent_ids_uniquecurrent  test_172_outside_private_rangecurrent  test_404_does_not_leak_detailcurrent  test_404_pagecurrent  test_404_returns_htmlcurrent  test_500_does_not_leak_excepticurrent  test_500_shows_generic_messagecurrent  test_accept_valid_requestcurrent  test_access_updates_lru_ordercurrent  test_account_infocurrent  test_account_sessionscurrent  test_account_tokenscurrent  test_acknowledge_not_foundcurrent  test_acknowledge_transitions_scurrent  test_acknowledge_wrong_statuscurrent  test_acquire_immediatecurrent  test_active_profile_persistscurrent  test_adapter_export_uses_relatcurrent  test_adapter_persistence_uses_current  test_add_adaptercurrent  test_add_and_countcurrent  test_add_and_get_edgecurrent  test_add_and_get_nodecurrent  test_add_and_searchcurrent  test_add_entity_creates_nodecurrent  test_add_entity_persistscurrent  test_add_entity_stores_propertcurrent  test_add_llm_tracecurrent  test_add_mcp_server_duplicate_current  test_add_mcp_server_sse_transpcurrent  test_add_mcp_servercurrent  test_add_provider_update_existcurrent  test_add_providercurrent  test_add_relation_creates_edgecurrent  test_add_relation_stores_propecurrent  test_add_telegram_workercurrent  test_add_tool_tracecurrent  test_add_toolcurrent  test_add_worker_defaults_modelcurrent  test_add_worker_rejects_dupliccurrent  (+3052 more)
archive/: README.md
data/: roadmaps.json
deploy/: nginx-ha.conf
docs/: ARCHITECTURE_AND_SYSTEM_MAP.md  DOCS_CONSOLIDATION_PLAN.md  HANDOVER.md  README.md  ROADMAP.md  TROUBLESHOOTING.md  VERSIONING.md  compaction.md  docusaurus.config.js  package-lock.json  package.json  portability.md  sidebars.js  skill-manifest-spec.md  slash-commands.md  tsconfig.json  ui-rebuild-plan.md
docs-v2/: AUDIT_SUMMARY.md  README.md  ux-mockup-dashboard.html
kazma-data/: checkpoints.db-shm  checkpoints.db-wal  cron.db  sessions.db  settings.db  swarm_tasks.db
kazma-gateway/: pyproject.toml
kazma-gateway/kazma_gateway/: __init__.py  agent_handler.py  base.py  consumer.py  dispatcher.py  fastapi_integration.py  gateway.py  manager.py  mcp_server.py  rate_feedback.py  schemas.py  slash_commands.py  suggestions.py  swarm_notify.py  telegram_format.py  typing_keepalive.py
kazma-gateway/kazma_gateway/adapters/: __init__.py  discord.py  discord_bus.py  slack.py  slack_bus.py  telegram.py  telegram_bus.py  telegram_callbacks.py  telegram_keyboards.py  telegram_parse.py  telegram_send.py  telegram_stt.py  voice_helpers.py
kazma-gateway/kazma_gateway/agent_handler/: __init__.py  attachments.py  commands.py  graph.py  hitl.py  store.py  swarm_dispatch.py  swarm_output.py  swarm_output_adapters.py
kazma-gateway/kazma_gateway/routers/: __init__.py  bookmarks.py  git.py  github.py  github_client.py  pipeline.py  workspace.py  workspaces.py
kazma-gateway/kazma_gateway/stores/: __init__.py  checkpoint.py  sqlite.py
kazma-gateway/kazma_gateway/tests/: __init__.py  conftest.py  test_discord_bus.py  test_ide_commands.py  test_slack_bus.py  test_telegram_bus.py
kazma-gateway/kazma_gateway_tests/: test_gateway_ux.py  test_swarm_approval_callbacks.py  test_telegram_reactions.py
kazma-gateway/tests/: conftest.py  test_gateway_ux.py  test_telegram_reactions.py
kazma-tui/: ENHANCEMENTS.md  PHASE_3_COMPLETE.md  PHASE_4_COMPLETE.md  README.md
kubernetes/: hub-deployment.yaml  hub-secrets.yaml  hub-secrets.yaml.template
loadtests/: README.md  k6_swarm.js  locustfile_swarm.py  locustfile_websocket.py  run_loadtests.py
models/: yolov11-oilgas.pt
sample-skill/: skill_manifest.yaml
scripts/: backup_kazma.py  check_docs_sync.py  docker-entrypoint.sh  fix-cloudflare-tunnel-tasks.ps1  generate_metrics.py  generate_tools_catalog.py  replace_ui_emojis.py  (+7 more)
(+1041 files in other folders)
