[project]
name = "kazma"
version = "0.1.0"
description = "Kazma — Autonomous AI agent framework with sqlite-vec, LangGraph, and Arabic RTL dashboard"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sqlite-vec>=0.1.0",
    "langgraph>=0.2.0",
    "langfuse>=2.0.0",
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
cli = [
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.scripts]
kazma = "kazma_cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kazma-core/kazma_core", "kazma-memory/kazma_memory", "kazma-skills/kazma_skills", "kazma-connectors/kazma_connectors", "kazma-providers/kazma_providers", "kazma-ui/kazma_ui", "kazma-cli/kazma_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
