[project]
name = "kazma"
version = "0.1.0"
description = "Kazma — Autonomous AI agent framework with sqlite-vec, LangGraph, and Arabic RTL dashboard"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sqlite-vec>=0.1.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint-sqlite>=3.0.0",
    "aiosqlite>=0.20.0",
    "langfuse>=2.0.0",
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "cryptography>=41.0.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "textual>=8.0.0",
    "psutil>=5.9.0",
    "aiogram>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
cli = [
    "click>=8.1.0",
    "rich>=13.0.0",
]
tui = [
    "textual>=8.0.0",
    "python-bidi>=0.4.0",
]

[project.scripts]
kazma = "kazma_cli.main:main"
kazma-tui = "kazma_tui.tui:main"
kazma-web = "kazma_ui.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kazma-core/kazma_core", "kazma-memory/kazma_memory", "kazma-skills/kazma_skills", "kazma-connectors/kazma_connectors", "kazma-comms/kazma_comms", "kazma-providers/kazma_providers", "kazma-ui/kazma_ui", "kazma-cli/kazma_cli", "kazma-tui/kazma_tui", "kazma-gateway/kazma_gateway"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = ["examples/*", ".venv/*"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["N806", "E501", "F841", "W293", "N801", "E402"]

[tool.ruff.lint.per-file-ignores]
[tool.mypy]
python_version = "3.11"
strict = true
