[project]
name = "kazma"
version = "0.3.0"
description = "Kazma — Autonomous AI agent framework with LangGraph, ChromaDB RAG, and Arabic RTL dashboard"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint-sqlite>=3.0.0",
    "aiosqlite>=0.20.0",
    "langfuse>=2.0.0",
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "cryptography>=41.0.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "textual>=8.0.0",
    "psutil>=5.9.0",
    "aiogram>=3.0.0",
    "websockets>=12.0",
    "duckduckgo-search>=6.0",
    "trafilatura>=1.12",
    "markdown>=3.6",
    "tenacity>=8.0.0",
    "networkx>=3.1",
    "click>=8.1.0",
    "rich>=13.0.0",
    "google-cloud-aiplatform>=1.159.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "locust>=2.20.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.12.0",
    "fakeredis>=2.20.0",
    "httpx>=0.27.0",
]
tracing = [
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.24.0",
    "opentelemetry-instrumentation-fastapi>=0.46.0",
    "opentelemetry-instrumentation-httpx>=0.46.0",
    "opentelemetry-instrumentation-requests>=0.46.0",
    "opentelemetry-instrumentation-sqlite3>=0.46.0",
]
tui = [
    "textual>=8.0.0",
    "python-bidi>=0.4.0",
]
rag = [
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
]

[project.scripts]
kazma = "kazma_cli.main:main"
kazma-tui = "kazma_tui.app:main"
kazma-web = "kazma_ui.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kazma-core/kazma_core", "kazma-memory/kazma_memory", "kazma-skills/kazma_skills", "kazma-ui/kazma_ui", "kazma-cli/kazma_cli", "kazma-tui/kazma_tui", "kazma-gateway/kazma_gateway"]

[tool.pytest.ini_options]
# Package suites + root regression corpus. TUI uses kazma_tui_tests to avoid
# ImportPathMismatch with root tests/conftest.py.
testpaths = [
    "kazma-core/kazma_core_tests",
    "kazma-gateway/kazma_gateway_tests",
    "kazma-ui/kazma_ui_tests",
    "kazma-tui/kazma_tui_tests",
    "tests",
]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --strict-markers --tb=short"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
]

[tool.coverage.run]
source = ["kazma-core/kazma_core", "kazma-gateway/kazma_gateway"]
omit = ["*/tests/*", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = ["examples/*", ".venv/*"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["N806", "E501", "F841", "W293", "N801", "E402"]

[tool.ruff.lint.per-file-ignores]
[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = "kazma_core.*"
ignore_missing_imports = true
