[project]
name = "kazma-gateway"
version = "0.1.0"
description = "Kazma Gateway — Unified, polling-based multi-platform message bus. Headless: no webhooks, no tunnels."
license = { text = "MIT" }
requires-python = ">=3.11,<3.14"
dependencies = [
    "httpx>=0.27.0",
    "fastapi>=0.110.0",
    "aiosqlite>=0.20.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kazma_gateway"]
